examples/test/testpolicy7248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7248
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key4: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value38
      podSelector:
        matchLabels:
          key25: value46
          key30: value2
          key34: value14
